2005-05-20  Laurent Sansonetti  <lrz@gnome.org>

	Initial revision of the Cocoa version.

	* alexandria.xcode,
	  lib/alexandria/macui.rb,
	  lib/alexandria/utils.rb,
	  lib/alexandria/macui/AddBookController.rb,
	  lib/alexandria/macui/BooksDataSource.rb,
	  lib/alexandria/macui/Info.plist,
	  lib/alexandria/macui/LibrariesDataSource.rb,
	  lib/alexandria/macui/LibrariesTableView.rb,
	  lib/alexandria/macui/MainController.rb,
	  lib/alexandria/macui/main.m,
	  lib/alexandria/macui/main.rb,
	  lib/alexandria/macui/MainWindow.nib:

	Added.

	* lib/alexandria.rb,
	  lib/alexandria/book_providers.rb,
	  lib/alexandria/library.rb,
	  lib/alexandria/preferences.rb,
	  lib/alexandria/book_providers/amazon.rb,
	  lib/alexandria/book_providers/proxis.rb,
	  lib/alexandria/ui/icons.rb:

	Refactored to share more code with the Cocoa code.

2005-04-18  Laurent Sansonetti  <lrz@gnome.org>

	* AUTHORS,
	  lib/alexandria.rb:

	Added Lucas.

2005-04-11  Laurent Sansonetti  <lrz@gnome.org>

	* lib/alexandria/ui/main_app.rb:

	Do not print the '%d unrated books' status line when all books have
	been rated.

	* lib/alexandria/ui/book_properties_dialog_base.rb,
	  lib/alexandria/ui/completion_models.rb:

	Auto-complete borrowers.

	* TODO:

	Updated.

2005-04-09  Laurent Sansonetti  <lrz@gnome.org>

	* data/alexandria/icons/favorite_tag.png:

	Added.

	* lib/alexandria/ui/icons.rb,
	  lib/alexandria/ui/main_app.rb:

	Tag icons with a heart image when the books they represent have a rating
	of 5.

	* lib/alexandria/book_providers.rb,
	  lib/alexandria/book_providers/z3950.rb,
	  lib/alexandria/ui/preferences_dialog.rb:

	More work on the abstract providers.

2005-04-09  Laurent Sansonetti  <lrz@gnome.org>

	* lib/alexandria/book_providers/z3950.rb:

	Added (not complete though).

	* data/alexandria/glade/preferences_dialog.glade:

	Introduced an expert mode which shows Add and Remove providers buttons.

	* lib/alexandria/book_providers.rb:
