@@ -1,3 +1,9 @@
+2005-05-22  Owain Evans  <o.evans@gmail.com> 
+
+	* lib/alexandria/library.rb:
+
+	Support for American UPC barcodes.
+
 2005-05-20  Laurent Sansonetti  <lrz@gnome.org>
 
 	Initial revision of the Cocoa version.
